Questions display to the HTML with start quiz button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </header>
 <section>
     <h1>Coding Quiz on JavaScipt</h1>
-    <p id="quizquestions"></p>
+    <p id="question_title"></p>
     <p class="gamedescription"></p>
     <button id='startquiz'> Start Quiz!</button>
     <label id="score" class="scoreposition"></label>
