--- a/index.html
+++ b/index.html
@@ -6,22 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   </head>
 <body>
-  <header>
-    <div id="timer">60</div>
-  </header>
-  <section>
+  <section class="jumbotron">
+    <div id="timer"class="badge badge-secondary"><h1>60</h1></div>
     <h1>Welcome to the Javascript Quiz!</h1>
-    <button id="startquiz">Start the Quiz!</button>
+    <button id="startquiz" class="btn btn-primary">Start the Quiz!</button>
     <h3 id = "question"></h3>
-    <div>
-      <div id = "choice1"></div>
-      <div id = "choice2"></div>
-      <div id = "choice3"></div>
-      <div id = "choice4"></div>
+    <p>Welcome to my quiz on Javascript; there are 5 questions with a minute on the timer. If you answer a question correctly, you will see a prompt telling you that you are correct and given 20 points. If you answer incorrectly, you will be prompt that you are wrong, and 10 seconds will be removed from the clock. After the quiz, log your initials, then the password below in the high scores, and come back and try again. </p>
+    <div class="list-group-item list-group-item-action active">
+      <h3 id = "question"></h3>
+      <div id = "choice1"class="list-group-item list-group-item-action"></div>
+      <div id = "choice2"class="list-group-item list-group-item-action"></div>
+      <div id = "choice3"class="list-group-item list-group-item-action"></div>
+      <div id = "choice4"class="list-group-item list-group-item-action"></div>
     </div>
-    <div><span id="score">0</span>/100</div>
+    <div><h3><span id="score"class="badge badge-secondary">0</span>/100</h3></div>
+    <!-- <button id ="submit">Submit Score!</button> -->
+  </section>
+  <section class="card" style="width: 30rem;">
+    <div class="card-header">
+      <h3>High Scores!</h3>
+      <div id = "userhighscores"></div>
+      <div id = "intials"><input id="userintials"><input></div>
+      <div id = "intials"><input id="userintials"><input></div>  
+      <div id = "intials"><input id="userintials"><input></div>  
+      <div id = "intials"><input id="userintials"><input></div>  
+      <div id = "intials"><input id="userintials"><input></div>      
+    </div>
   </section>
   <script src="script.js"></script>
 </body>
